--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 iniconfig==2.0.0
 packaging==24.1
 pluggy==1.5.0
+pygame==2.6.1
+pygame-ce==2.5.1
+pyghelpers==1.1
+pygwidgets==1.1.2
 pytest==8.3.3
